@@ -31,7 +31,6 @@ import slimeknights.tconstruct.tools.TinkerModifiers;
 
 import javax.annotation.Nullable;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -207,7 +206,7 @@ public class IncrementalModifierRecipe extends AbstractModifierRecipe {
     if (slot >= 0 && slot < inputs.size()) {
       return inputs.get(slot);
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
   /* Helpers */
